# ahd-data-pipelines

./: .coverage  .coverage.MacBook-Pro-8.local.42164.XSawLOwx  .coveragerc  .deployment_gitignore  .envrc  .flake8  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: debug_databricks_path.yml  gha_apptest.yml  gha_testing.yml  on_merge.yml  pr_autodeploy.yml  pr_autodeploy_trigger.yml  pr_coverage_check.yml  pr_lint.yml  pr_validate.yml  pr_validate_prod.yml  pr_version.yml  pr_yaml_lint.yml
conf.j2/: data.ci.yml  data.dev.yml  data.prod.yml  data.staging.yml  databricks.yml
conf.j2/parameters/census/language/: bronze_task.yml  gold_task.yml  green_task.yml  silver_task.yml
conf.j2/parameters/foo/: foo.yml  foobar.yml
conf.j2/parameters/hazard/: bronze_epicenter_task.yml  bronze_recent_shakemap_geometries.yml  gold_epicenter_task.yml  green_epicenter_agol_task.yml
conf.j2/parameters/ops/: heartbeat.yml
conf.j2/parameters/shelter/: abc.yml
conf.j2/workflows/census/: language.yml
conf.j2/workflows/esri/: greendataupdate.yml
conf.j2/workflows/facilities/: cdph.yml  cdph_integration.yml  cdph_opstatus.yml  cdss.yml  cdss_opstatus.yml  historical_impact.yml  opandevac.yml
conf.j2/workflows/hazard/: earthquake.yml  emsa.yml  hotspots.yml  weather.yml  wildfire.yml
conf.j2/workflows/ops/: heartbeat.yml
conf.j2/workflows/shelter/: append_to_site_informtion.yml  backdate_historical_agol.yml  bootstrap.yml  cassi.yml  report.yml  shelter_excel_report.ipynb  status.yml
conf/parameters/ops/: heartbeat.yml
conf/workflows/ops/: heartbeat.yml
config/jobs/: foo_job.yml
config/parameters/: abc.yml  foo.yml
scripts/: install_libkrb5.sh
src/ahd_data_pipelines/: __init__.py  classwithmock.py  main.py  uppercase.py
src/ahd_data_pipelines/dependencies/: example.py
src/ahd_data_pipelines/integrations/: agol_datasource.py  datasource.py  datasource_factory.py  datasource_type.py  db_datasource.py  file_datasource.py  http_datasource.py  jdbc_datasource.py  noop_datasource.py  object_datasource.py  pandas_datasource.py  s3_datasource.py
src/ahd_data_pipelines/jobs/: main.py
src/ahd_data_pipelines/pandas/: geopandas_wrapper.py  pandas_helper.py  pandas_wrapper.py
src/ahd_data_pipelines/tasks/: etl_task.py  medallion_etl_task.py  my_test.py  task.py
src/ahd_data_pipelines/transformations/: convert_zpoint.py  drop_columns.py  drop_duplicates.py  epoch_to_timestamp.py  fillna.py  mutation_columns.py  rename_columns.py  string_replace.py  to_crs.py
src_orig/: dlt_pipeline.ipynb
src_orig/ahd_data_pipelines/integrations/: agol_datasource.py  datasource_factory.py  datasource_type.py  file_datasource.py  jdbc_datasource.py
src_orig/ahd_data_pipelines/pandas/: pandas_helper.py  pandas_wrapper.py
src_orig/ahd_data_pipelines/tasks/: etl_task.py
src_orig/ahd_data_pipelines/transformations/: convert_zpoint.py  drop_columns.py  mutation_columns.py  transformation.py
tests/: main_t3st.py
tests/unit/: uppercase_test.py
tests/unit/ahd_data_pipelines/: classwithmock_test.py
(+200 files in other folders)
