[tool.poetry]
name = "ahd-data-pipelines"
version = "0.0.30"
description = "wheel file based on ahd-data-pipelines"
authors = ["balutbomber <balutbomber@gmail.com>"]
readme = "README.md"

include = [
    { path = "config", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
jinja-cli = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foo = "ahd_data_pipelines.jobs.main:main"