[tool.poetry]
name = "ahd-data-pipelines"
version = "1.1.1"
description = "wheel file based on ahd-data-pipelines"
authors = ["balutbomber <balutbomber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
arcgis = "2.2.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
shapely = "2.0.2"
geopandas = "0.14.2"
numpy = "1.26.3"
geopy = "2.4.1"
boto3 = "1.34.27"
openpyxl = "3.1.2"
dlt = "0.4.2"
sqlalchemy = "2.0.25"
psycopg2-binary = "2.9.9"
yamllint = "^1.35.1"


[tool.poetry.group.dev.dependencies]
jinja-cli = "^1.2.2"
pyarrow = "15.0.0"
pandas = "^2.2.0"
pytest = "8.0.2"
pytest-cov = "^4.1.0"
pyspark = "3.4.1"
pytest-mock = "3.10.0"
delta-spark = "2.4.0"
flake8 = "^7.0.0"
black = "^24.2.0"
databricks-connect = "13.0.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
medallion_task = "ahd_data_pipelines.tasks.medallion_etl_task:entrypoint"
gold_shelter_sites_historical_task = "ahd_data_pipelines.tasks.shelter.report.gold_shelter_sites_historical_task:entrypoint"
green_data_update_task = "ahd_data_pipelines.tasks.esri.green_data_update_job:entrypoint"
gold_wildfire_perims_task = "ahd_data_pipelines.tasks.hazard.wildfire.gold_task:entrypoint"
silver_wildfire_perims_task = "ahd_data_pipelines.tasks.hazard.wildfire.silver_task:entrypoint"
